--- a/style/elvis/src/components/table.scss
+++ b/style/elvis/src/components/table.scss
@@ -108,14 +108,6 @@ $table-border-radius: 8px;
     }
   }
 
-  &.e-table--bold {
-    tbody {
-      th {
-        font-weight: 500;
-      }
-    }
-  }
-
   td,
   th {
     @include typography.typography('text-description');
@@ -158,7 +150,6 @@ $table-border-radius: 8px;
   table-layout: auto;
   width: 100%;
   overflow: hidden;
-  text-align: left;
   border-radius: $table-border-radius;
   border-spacing: 0;
   box-shadow: 0px 0px 0px 1px colors.color('grey-10');
@@ -180,17 +171,13 @@ $table-border-radius: 8px;
     border-bottom: 1px solid colors.color('grey-10');
   }
 
-  td:first-of-type {
-    text-align: left;
-  }
-  th + td:first-of-type,
-  td:not(:first-of-type) {
-    text-align: right;
-  }
-
   thead {
     tr {
       height: 56px;
+    }
+    th,
+    td {
+      text-align: left;
     }
     @extend %header-style;
   }
@@ -200,6 +187,15 @@ $table-border-radius: 8px;
     font-size: 17px;
     color: colors.color('font-color');
     font-weight: 500;
+    th,
+    td {
+      text-align: left;
+    }
+  }
+
+  th + td:first-of-type,
+  td:not(:first-of-type) {
+    text-align: right;
   }
 
   &.e-table-mobile--compact {
@@ -217,23 +213,5 @@ $table-border-radius: 8px;
     tbody tr:first-of-type th {
       font-size: 15px;
     }
-  }
-
-  &.e-table-mobile--bold {
-    tbody {
-      th {
-        font-weight: 700;
-      }
-    }
-  }
-
-  &--align-center {
-    text-align: center;
-  }
-  &--align-left {
-    text-align: left;
-  }
-  &--align-right {
-    text-align: right;
   }
 }
